.provarCaches/00D410000011HE0EAM/objects/rstk__appsecurity__c.object
<CustomObject>
    <fields>
        <fullName>rstk__m_tapaytype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Pay Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_taxlocation__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tax Locations</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_termscode__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Terms Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_transferRequestPackingSlip__c</fullName>
        <label>Transfer Request Packing Slip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_ttaphdr__c</fullName>
        <label>Payable Batch Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_unitofmeasuremaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Of Measure Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_uomconversionfactors__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>UOM Conversion Factors</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_usertimeentry__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>User Time Entry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_vendormaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wccapacityplanning__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Center Capacity Planning Workbench</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wcoperassignment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Operation Assignments by Work Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_woclose__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Close</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_woclosereversal__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Close Reversal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wocomponentdetails__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Component Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wocomponents__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Components</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wodisassemblyprint__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Disassembly Print</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_woissue__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_woissuereversal__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Issue Reversal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wolaborbooking__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Labor Booking</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wolabormachinebooking__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Labor &amp; Machine Booking</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wolaborreversal__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Labor Reversal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wooperationactual__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Operation Actual</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wooperationcost__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Operation Cost</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wooperationlocation__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Operation Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wooperationqtybooking__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Operation Qty Booking</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wooperationqtyreversal__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Operation Qty Reversal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wooperations__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Operations</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wooperationschedule__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Operation Schedule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wooperationswip__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Operations WIP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wopicklist__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Pick List</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_woreceipt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Receipt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_woreceiptreversal__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Receipt Reversal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_workcenterdispatchlist__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Center Dispatch List</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_woscheduling__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Scheduling</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_woscrap__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Scrap</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_woserial__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Serial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_wotraveler__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Traveler</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_woworkbench__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Workbench</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_abccyclecount__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ABC / Cycle Count</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_boc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>BOC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_costaccounting__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cost Accounting</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_cpq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>CPQ and Contract</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_csg__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>CSG</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_forecastingmrp__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecasting / MRP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_iblogicstics__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inbound Logistics</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_inventorymanagement__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Management</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_inventorytransactions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Transactions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_mfgengineering__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Mfg Engineering</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_packaging__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Packaging</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_projectcontrol__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project Control</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_purchasing__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchasing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_quickbooks__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>QuickBooks</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_requisitions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisitions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_rootstockFinancials__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Rootstock Financials</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_rs_apis__c</fullName>
        <description>Rootstock API&apos;s</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>RS APIs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_rs_purge_monitor__c</fullName>
        <description>Data Purge and Process Monitoring</description>
        <label>RS Purge-Monitor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_salesorder__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Processes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_salesordersu__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Setup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_schedulingcapacityplanning__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Scheduling / Capacity Planning</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_shopfloor__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shop Floor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_standardcosts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Standard Costs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_systemsetup__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>System Setup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ms_workorders__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Orders</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__qbpayableinvoiceexport__c</fullName>
        <label>Payable Invoice Export</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__stocklocadd__c</fullName>
        <inlineHelpText>type=transaction</inlineHelpText>
        <label>Stock Location Add</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydiv__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Obsolete</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__viewcostind__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>View Costs</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Application Security</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Security</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>